--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -33,14 +33,7 @@ dependencies {
     compile 'com.squareup:javapoet:1.9.0'
     compile "com.google.code.gson:gson:2.7"
 
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.0'
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0'
     apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.0'
-
-    //compile 'com.jakewharton:butterknife:8.8.1'
-
-}
-apt {
-    processor "com.heaven7.java.data.mediator.compiler.MediatorAnnotationProcessor"
-    // if you only want to run the processors above
-   // disableDiscovery true
 }
