--- a/data-mediator/build.gradle
+++ b/data-mediator/build.gradle
@@ -26,6 +26,7 @@ allprojects {
 dependencies {
 
     testCompile 'junit:junit:4.12'
+    testCompile 'com.squareup:javapoet:1.9.0'
    // compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0'
 }
 
