--- a/data-mediator-compiler/build.gradle
+++ b/data-mediator-compiler/build.gradle
@@ -29,6 +29,8 @@ allprojects {
 
 dependencies {
     testCompile 'junit:junit:4.12'
+
+    compile 'com.heaven7.java.base:Java-base:1.0.9'
     compile 'com.squareup:javapoet:1.9.0'
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0'
 }
@@ -37,7 +39,7 @@ publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator.compiler'
     artifactId = 'data-mediator-compiler'
-    publishVersion = '1.0.2'
+    publishVersion = '1.0.3'
     desc = 'this is a java compiler lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
