--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -29,11 +29,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 
-    //apt files('libs/data-mediator.jar')
-    compile "com.google.code.gson:gson:2.7"
+    compile 'com.google.code.gson:gson:2.7'
 
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0'
     compile 'com.heaven7.java.data.mediator:data-mediator:1.0.3-beta'
     apt 'com.squareup:javapoet:1.9.0'
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.0.5-beta7'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.0.5-beta10'
 }
