--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
 
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.0.3-beta'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.0.3'
     apt 'com.squareup:javapoet:1.9.0'
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.0.5-beta10'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.0.5'
 }
