prepare to add invoke for data module

--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -31,8 +31,10 @@ dependencies {
 
     compile 'com.google.code.gson:gson:2.7'
 
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.1'
     compile 'com.heaven7.java.data.mediator:data-mediator:1.0.3'
     apt 'com.squareup:javapoet:1.9.0'
     apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.0.5'
+
+    compile 'com.heaven7.core.util:util-v1:1.1.2'
 }
