--- a/data-mediator/build.gradle
+++ b/data-mediator/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'com.squareup:javapoet:1.9.0'
-   // compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0'
+    compile 'com.heaven7.java.base:Java-base:1.0.9'
 }
 
 publish {
