--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -32,9 +32,15 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
 
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.1'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.0.5'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.0.6'
     apt 'com.squareup:javapoet:1.9.0'
     apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.0.6'
 
+    //helper util
     compile 'com.heaven7.core.util:util-v1:1.1.2'
+    compile 'com.heaven7.android.util2:android-util2:1.1.4'
+
+    //butterknife
+    apt "com.jakewharton:butterknife-compiler:8.2.0"
+    compile "com.jakewharton:butterknife:8.2.0"
 }
