--- a/Data-mediator-demo/app/src/main/AndroidManifest.xml
+++ b/Data-mediator-demo/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- demos -->
+        <activity android:name=".activity.TestDoubleBindActivity"/>
+
+
     </application>
 
 </manifest>
