add demo for chain call

--- a/Data-mediator-demo/app/src/main/AndroidManifest.xml
+++ b/Data-mediator-demo/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <!-- demos -->
         <activity android:name=".activity.TestDoubleBindActivity"/>
+        <activity android:name=".activity.TestChainCallActivity"/>
 
 
     </application>
