--- a/Data-mediator-demo/app/src/main/AndroidManifest.xml
+++ b/Data-mediator-demo/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <!-- demos -->
         <activity android:name=".activity.TestDoubleBindActivity"/>
         <activity android:name=".activity.TestChainCallActivity"/>
+        <activity android:name=".activity.TestPropertyChangeActivity"/>
 
 
     </application>
