--- a/data-mediator-compiler/build.gradle
+++ b/data-mediator-compiler/build.gradle
@@ -26,7 +26,7 @@ allprojects {
 
 dependencies {
     testCompile 'junit:junit:4.12'
-    testCompile 'com.heaven7.java.data.mediator:data-mediator:1.0.2'
+    testCompile 'com.heaven7.java.data.mediator:data-mediator:1.0.8-beta'
 
     compile 'com.heaven7.java.base:Java-base:1.0.9'
     compile 'com.squareup:javapoet:1.9.0'
@@ -37,7 +37,7 @@ publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator.compiler'
     artifactId = 'data-mediator-compiler'
-    publishVersion = '1.0.12'
+    publishVersion = '1.0.13-beta4'
     desc = 'this is a java compiler lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
