--- a/data-mediator-compiler/build.gradle
+++ b/data-mediator-compiler/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: "idea"
 apply plugin: 'java'
 apply plugin: 'com.novoda.bintray-release'
 
@@ -25,8 +26,9 @@ allprojects {
 // In this section you declare the dependencies for your production and test code
 
 dependencies {
+
     testCompile 'junit:junit:4.12'
-    testCompile 'com.heaven7.java.data.mediator:data-mediator:1.0.8-beta9'
+    testCompile 'com.heaven7.java.data.mediator:data-mediator:1.0.8-beta11'
 
     compile 'com.heaven7.java.base:Java-base:1.0.9'
     compile 'com.squareup:javapoet:1.9.0'
@@ -37,7 +39,7 @@ publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator.compiler'
     artifactId = 'data-mediator-compiler'
-    publishVersion = '1.0.13-beta7'
+    publishVersion = '1.0.13-beta9'
     desc = 'this is a java compiler lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
