--- a/data-mediator/build.gradle
+++ b/data-mediator/build.gradle
@@ -1,4 +1,4 @@
-
+apply plugin: "idea"
 apply plugin: 'java'
 apply plugin: 'com.novoda.bintray-release'
 
@@ -38,7 +38,7 @@ publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator'
     artifactId = 'data-mediator'
-    publishVersion = '1.0.8-beta10'
+    publishVersion = '1.0.8-beta11'
     desc = 'this is a java lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
