--- a/Data-mediator-demo/app/src/main/AndroidManifest.xml
+++ b/Data-mediator-demo/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".activity.TestParcelableDataActivity"/>
         <activity android:name=".activity.LogForParcelableActivity"/>
 
+        <activity android:name=".activity.TestViewBindActivity"/>
+
 
     </application>
 
