prepare upload data-mediator-android to jcenter

--- a/Data-mediator-demo/data-mediator-android/build.gradle
+++ b/Data-mediator-demo/data-mediator-android/build.gradle
@@ -30,5 +30,36 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.heaven7.core.util:util-v1:1.1.2'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.0.8-beta12'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.0.8-beta13'
 }
+
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'data-mediator-android'   // Has to be same as your library module name
+
+    publishedGroupId = 'com.heaven7.android.data.mediator'
+    libraryName = bintrayName
+    artifact = bintrayName     // Has to be same as your library module name
+
+    libraryDescription = 'support data-mediator on android.'
+
+    // Your github repo link
+    siteUrl = 'https://github.com/LightSun/data-mediator'
+    gitUrl = siteUrl + '.git'
+    githubRepository= 'LightSun/data-mediator'
+
+    libraryVersion = '1.0'
+
+    developerId = 'heaven7'
+    developerName = 'heaven7'
+    developerEmail = 'donshine723@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/bintrayv1.gradle'
+//gradlew clean build install bintrayUpload
+
