--- a/Data-mediator-demo/app/src/main/AndroidManifest.xml
+++ b/Data-mediator-demo/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".activity.LogForParcelableActivity"/>
 
         <activity android:name=".activity.TestViewBindActivity"/>
+        <activity android:name=".activity.TestTextViewBindActivity"/>
 
 
     </application>
