--- a/Data-mediator-demo/data-mediator-android/build.gradle
+++ b/Data-mediator-demo/data-mediator-android/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 101
+        versionName '1.0.1'
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -30,7 +30,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.heaven7.core.util:util-v1:1.1.2'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.0.8-beta14'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.0.8-beta15'
 }
 
 ext {
@@ -48,7 +48,7 @@ ext {
     gitUrl = siteUrl + '.git'
     githubRepository= 'LightSun/data-mediator'
 
-    libraryVersion = '1.0'
+    libraryVersion = android.defaultConfig.versionName
 
     developerId = 'heaven7'
     developerName = 'heaven7'
