--- a/Data-mediator-demo/app/src/main/AndroidManifest.xml
+++ b/Data-mediator-demo/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
 
         <activity android:name=".activity.TestViewBindActivity"/>
         <activity android:name=".activity.TestTextViewBindActivity"/>
+        <activity android:name=".activity.TestRecyclerListBindActivity"/>
 
 
     </application>
