--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     compile 'com.heaven7.java.data.mediator:data-mediator:1.0.8-beta17'
     apt 'com.squareup:javapoet:1.9.0'
     apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.0.13-beta16'
-    compile project(':data-mediator-android')
+
+    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.1'
+    //compile project(':data-mediator-android')
 
     //helper util
     compile 'com.heaven7.core.util:util-v1:1.1.2'
