--- a/data-mediator-annotations/build.gradle
+++ b/data-mediator-annotations/build.gradle
@@ -1,4 +1,5 @@
 // apply plugin: 'java-library'
+apply plugin: "idea"
 apply plugin: 'java'
 apply plugin: 'com.novoda.bintray-release'
 
@@ -31,7 +32,7 @@ publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator.annotation'
     artifactId = 'data-mediator-annotations'
-    publishVersion = '1.0.2'
+    publishVersion = '1.0.3'
     desc = 'this is a annotation lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
