--- a/Data-mediator-demo/data-mediator-android/build.gradle
+++ b/Data-mediator-demo/data-mediator-android/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 25
-        versionCode 101
-        versionName '1.0.1'
+        versionCode 102
+        versionName '1.0.2'
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -30,7 +30,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.heaven7.core.util:util-v1:1.1.2'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.0.8-beta17'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.1.0'
 }
 
 ext {
