--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -36,9 +36,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
 
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.3'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.1.2'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.1.3-beta2'
     apt 'com.squareup:javapoet:1.9.0'
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.1.1'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.1.2-beta2'
 
     compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.3'
     //compile project(':data-mediator-android')
