add analyse demo

--- a/Data-mediator-demo/app/src/main/AndroidManifest.xml
+++ b/Data-mediator-demo/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".activity.TestRecyclerListBindActivity" android:label="TestRecyclerListBind"/>
         <activity android:name=".activity.TestRecyclerListBind2Activity" android:label="TestRecyclerListBind2"/>
         <activity android:name=".activity.TestSparseArrayActivity" android:label="TestSparseArray"/>
+        <activity android:name=".activity.TestAnalyseActivity" android:label="TestAnalyseActivity"/>
 
 
     </application>
