--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -36,9 +36,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
 
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.3'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.1.3-beta8'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.1.3-beta9'
     apt 'com.squareup:javapoet:1.9.0'
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.1.2-beta8'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.1.2-beta9'
 
     //compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.3'
     compile project(':data-mediator-android')
@@ -50,4 +50,7 @@ dependencies {
     //butterknife
     apt "com.jakewharton:butterknife-compiler:8.2.0"
     compile "com.jakewharton:butterknife:8.2.0"
+
+    //other depend
+    compile 'org.heaven7.core.view:common-view:1.2.3'
 }
