--- a/data-mediator-compiler/build.gradle
+++ b/data-mediator-compiler/build.gradle
@@ -28,6 +28,7 @@ allprojects {
 dependencies {
 
     testCompile 'junit:junit:4.12'
+    testCompile 'com.google.code.gson:gson:2.8.2'
     testCompile 'com.heaven7.java.data.mediator:data-mediator:1.1.3-beta3'
 
     compile 'com.heaven7.java.base:Java-base:1.0.9'
@@ -39,7 +40,7 @@ publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator.compiler'
     artifactId = 'data-mediator-compiler'
-    publishVersion = '1.1.2-beta8'
+    publishVersion = '1.1.2-beta9'
     desc = 'this is a java compiler lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
