--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -36,12 +36,12 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
 
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.3'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.1.3-beta11'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.1.3'
     apt 'com.squareup:javapoet:1.9.0'
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.1.2-beta9'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.1.3'
 
-    //compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.3'
-    compile project(':data-mediator-android')
+    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.5'
+    //compile project(':data-mediator-android')
 
     //helper util
     compile 'com.heaven7.core.util:util-v1:1.1.2'
