support for all gson annotation done, wait publish and test

--- a/data-mediator-support/build.gradle
+++ b/data-mediator-support/build.gradle
@@ -28,9 +28,10 @@ allprojects {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.1.3'
 
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.2.0-beta'
     compile 'com.heaven7.java.base:Java-base:1.0.9'
     compile 'com.google.code.gson:gson:2.8.2'
 }
@@ -39,7 +40,7 @@ publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator.support.gson'
     artifactId = 'data-mediator-support'
-    publishVersion = '1.0'
+    publishVersion = '1.0.1'
     desc = 'this is a java gson-support lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
