--- a/data-mediator/build.gradle
+++ b/data-mediator/build.gradle
@@ -38,7 +38,7 @@ publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator'
     artifactId = 'data-mediator'
-    publishVersion = '1.1.3'
+    publishVersion = '1.2.0-beta'
     desc = 'this is a java lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
