--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -32,25 +32,25 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-
     compile 'com.google.code.gson:gson:2.7'
 
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.3'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.1.3'
+    //compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.3'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.2.0-beta'
     apt 'com.squareup:javapoet:1.9.0'
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.1.3'
 
+    //apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.2.0-beta'
     compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.5'
     //compile project(':data-mediator-android')
-
     //helper util
     compile 'com.heaven7.core.util:util-v1:1.1.2'
     compile 'com.heaven7.android.util2:android-util2:1.1.4'
-
     //butterknife
     apt "com.jakewharton:butterknife-compiler:8.2.0"
-    compile "com.jakewharton:butterknife:8.2.0"
-
+    compile 'com.jakewharton:butterknife:8.2.0'
     //other depend
     compile 'org.heaven7.core.view:common-view:1.2.3'
+
+    compile files('libs/data-mediator-support-gson.jar')
+    apt files('libs/data-mediator-compiler.jar')
+    compile files('libs/data-mediator-annotations.jar')
 }
