--- a/data-mediator-compiler/build.gradle
+++ b/data-mediator-compiler/build.gradle
@@ -33,7 +33,8 @@ dependencies {
 
     compile 'com.heaven7.java.base:Java-base:1.0.9'
     compile 'com.squareup:javapoet:1.9.0'
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.3'
+    //compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.3'
+    compile files('libs/data-mediator-annotations.jar')
 }
 
 publish {
