--- a/data-mediator-compiler/build.gradle
+++ b/data-mediator-compiler/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: "idea"
+//apply plugin: "idea"
 apply plugin: 'java'
 apply plugin: 'com.novoda.bintray-release'
 
@@ -29,19 +29,39 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'com.google.code.gson:gson:2.8.2'
-    testCompile 'com.heaven7.java.data.mediator:data-mediator:1.1.3-beta3'
+    testCompile 'com.heaven7.java.data.mediator:data-mediator:1.2.0-beta2'
+    testCompile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.1'
 
     compile 'com.heaven7.java.base:Java-base:1.0.9'
     compile 'com.squareup:javapoet:1.9.0'
-    //compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.3'
-    compile files('libs/data-mediator-annotations.jar')
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.5'
+    //compile files('libs/data-mediator-annotations.jar')
 }
 
 publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator.compiler'
     artifactId = 'data-mediator-compiler'
-    publishVersion = '1.2.0-beta'
+    publishVersion = '1.2.0'
     desc = 'this is a java compiler lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
+/*compileJava {
+    dependsOn generateQueryDSL
+    source generateQueryDSL.destinationDir
+}
+
+compileGeneratedJava {
+    dependsOn generateQueryDSL
+    options.warnings = false
+    classpath += sourceSets.main.runtimeClasspath
+}
+task generateQueryDSL(type: JavaCompile, group: 'build', description: 'Generates the QueryDSL query types') {
+    source = sourceSets.main.java
+    classpath = configurations.compile //+ configurations.querydslapt
+    options.compilerArgs = [
+            "-proc:only",
+            "-processor", "com.heaven7.java.data.mediator.compiler.MediatorAnnotationProcessor"
+    ]
+    destinationDir = sourceSets.generated.java.srcDirs.iterator().next()
+}*/
