--- a/data-mediator-compiler/build.gradle
+++ b/data-mediator-compiler/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'com.google.code.gson:gson:2.8.2'
-    testCompile 'com.heaven7.java.data.mediator:data-mediator:1.2.0'
+    testCompile 'com.heaven7.java.data.mediator:data-mediator:1.2.1'
     testCompile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.1'
 
     compile 'com.heaven7.java.base:Java-base:1.0.9'
@@ -42,7 +42,7 @@ publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator.compiler'
     artifactId = 'data-mediator-compiler'
-    publishVersion = '1.2.1'
+    publishVersion = '1.2.2-beta'
     desc = 'this is a java compiler lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
