--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -35,10 +35,10 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
 
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.5'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.2.1'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.2.2'
     apt 'com.squareup:javapoet:1.9.0'
 
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.2.2-beta'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.2.2'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.2'
     compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.5'
     //compile project(':data-mediator-android')
