--- a/Data-mediator-demo/test_compiler/build.gradle
+++ b/Data-mediator-demo/test_compiler/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     compile 'com.heaven7.java.data.mediator:data-mediator:1.2.1'
     apt 'com.squareup:javapoet:1.9.0'
 
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.2.2-beta'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.2.2'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.2'
 }
