--- a/plugin-data-mediator-test/build.gradle
+++ b/plugin-data-mediator-test/build.gradle
@@ -1,12 +1,28 @@
 group 'com.heaven7.plugin.idea.data_mediator.test'
 version '1.0-SNAPSHOT'
 
+apply plugin: "net.ltgt.apt-idea"
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
+buildscript {
+    repositories {
+        jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "net.ltgt.gradle:gradle-apt-plugin:0.12"
+    }
+}
+
 repositories {
     jcenter()
+    maven {
+        url "https://plugins.gradle.org/m2/"
+    }
 }
 
 dependencies {
@@ -14,4 +30,30 @@ dependencies {
 
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.5'
     compile 'com.heaven7.java.data.mediator:data-mediator:1.2.2'
+    compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.3'
+
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.2.2'
+    apt 'com.squareup:javapoet:1.9.0'
+}
+
+idea {
+    project {
+        // experimental: whether annotation processing will be configured in the IDE; only actually used with the 'idea' task.
+        configureAnnotationProcessing = true
+    }
+    module {
+        apt {
+            // whether generated sources dirs are added as generated sources root
+            addGeneratedSourcesDirs = true
+            // whether the apt and testApt dependencies are added as module dependencies
+            addAptDependencies = true
+
+            // The following are mostly internal details; you shouldn't ever need to configure them.
+            // whether the compileOnly and testCompileOnly dependencies are added as module dependencies
+            addCompileOnlyDependencies = false // defaults to true in Gradle < 2.12
+            // the dependency scope used for apt and/or compileOnly dependencies (when enabled above)
+            //PROVIDED
+            mainDependenciesScope = "COMPILE" // defaults to "COMPILE" in Gradle < 3.4, or when using the Gradle integration in                                IntelliJ IDEA
+        }
+    }
 }
