--- a/data-mediator-intellij-plugin/resources/META-INF/plugin.xml
+++ b/data-mediator-intellij-plugin/resources/META-INF/plugin.xml
@@ -28,7 +28,7 @@
 
   <actions>
     <!-- Add your actions here -->
-    <action id="generateParcelableNew" class="com.heaven7.plugin.idea.data_mediator.DataMediatorAction"
+    <action id="generateDataMediatorNew" class="com.heaven7.plugin.idea.data_mediator.DataMediatorAction"
             text="data-mediator"
             description="Generates code for class which used data-mediator">
       <add-to-group group-id="GenerateGroup" anchor="last"/>
