--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     compile 'com.heaven7.java.data.mediator:data-mediator:1.2.2'
     apt 'com.squareup:javapoet:1.9.0'
 
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0-beta'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.2.2'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.3'
     compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.5'
     //compile project(':data-mediator-android')
