--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -34,11 +34,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.8.2'
 
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.5'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.2.2'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.1.2'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.3.0-beta'
     apt 'com.squareup:javapoet:1.9.0'
 
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.2.2'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0-beta34'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.3'
     compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.5'
     //compile project(':data-mediator-android')
