--- a/Data-mediator-demo/test_compiler/build.gradle
+++ b/Data-mediator-demo/test_compiler/build.gradle
@@ -30,10 +30,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0'
     testCompile 'junit:junit:4.12'
 
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.0.5'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.2.1'
-    apt 'com.squareup:javapoet:1.9.0'
-
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.2.2'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.3'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.1.2'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.3.0-beta'
+
+    apt 'com.squareup:javapoet:1.9.0'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0-beta34'
 }
