--- a/Data-mediator-demo/test_compiler/build.gradle
+++ b/Data-mediator-demo/test_compiler/build.gradle
@@ -32,8 +32,8 @@ dependencies {
 
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.3'
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.1.3'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.3.0-beta'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.3.0-beta2'
 
     apt 'com.squareup:javapoet:1.9.0'
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0-beta34'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0-beta37'
 }
