--- a/Data-mediator-demo/test_compiler/build.gradle
+++ b/Data-mediator-demo/test_compiler/build.gradle
@@ -30,10 +30,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0'
     testCompile 'junit:junit:4.12'
 
-    compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.3'
+    //数据层框架的库
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.1.3'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.3.0-beta2'
-
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.3.0'
     apt 'com.squareup:javapoet:1.9.0'
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0-beta37'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0'
+    compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.4'
+    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.5'
 }
