--- a/plugin-data-mediator-test/build.gradle
+++ b/plugin-data-mediator-test/build.gradle
@@ -29,10 +29,10 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.1.3'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.2.2'
-    compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.3'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.3.0'
+    compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.4'
 
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0-beta36'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0'
     apt 'com.squareup:javapoet:1.9.0'
 }
 
