--- a/plugin-data-mediator-test/build.gradle
+++ b/plugin-data-mediator-test/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compile 'com.heaven7.java.data.mediator:data-mediator:1.3.0'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.4'
 
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0' //1.beta4
     apt 'com.squareup:javapoet:1.9.0'
 }
 
