--- a/data-mediator-compiler/build.gradle
+++ b/data-mediator-compiler/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 
     compile 'com.heaven7.java.base:Java-base:1.1.0'
     compile 'com.squareup:javapoet:1.9.0'
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.1.3'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.0-beta2'
     //compile files('libs/data-mediator-annotations.jar')
 }
 
