--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -22,9 +22,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
-configurations.all {
+/*configurations.all {
     resolutionStrategy.eachDependency { DependencyResolveDetails details ->
         def requested = details.requested
         if (requested.group == 'com.android.support') {
@@ -33,14 +37,14 @@ configurations.all {
             }
         }
     }
-}
+}*/
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.8.2'
@@ -50,9 +54,9 @@ dependencies {
     apt 'com.squareup:javapoet:1.9.0'
     apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.0'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.4'
-    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.5'
+    //compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.5'
 
-    //compile project(':data-mediator-android')
+    compile project(':data-mediator-android')
     //helper util
     compile 'com.heaven7.core.util:util-v1:1.1.2'
     compile 'com.heaven7.android.util2:android-util2:1.1.4'
