--- a/Data-mediator-demo/build.gradle
+++ b/Data-mediator-demo/build.gradle
@@ -22,6 +22,10 @@ allprojects {
         jcenter()
         maven { url "https://maven.google.com" }
     }
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+    }
 }
 
 task clean(type: Delete) {
