data-binding base test ok. wait more test

--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -27,17 +27,17 @@ android {
         abortOnError false
     }
 }
-
-/*configurations.all {
+//fix compat of com.android.support.
+configurations.all {
     resolutionStrategy.eachDependency { DependencyResolveDetails details ->
         def requested = details.requested
         if (requested.group == 'com.android.support') {
             if (!requested.name.startsWith("multidex")) {
-                details.useVersion '25.3.1'
+                details.useVersion '26.1.0'
             }
         }
     }
-}*/
+}
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
