--- a/data-binding-test/testgenerate/build.gradle
+++ b/data-binding-test/testgenerate/build.gradle
@@ -1,48 +1,39 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
+
+
+
     defaultConfig {
-        applicationId "com.heaven7.data.mediator.data_binding_test"
-        minSdkVersion 15
+        minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    // gson-support( added since 1.2.0)
-    compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.4'
     compile 'com.heaven7.java.data.mediator:data-mediator:1.4.0-beta4'
-
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.0-beta3'
     annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.1-beta17'
     annotationProcessor 'com.squareup:javapoet:1.9.0'
-
-    // if you want generate annotation of gson。(since 1.2.0 auto added)
-    compile "com.google.code.gson:gson:2.8.2"
-    // if you want to support data-bind of android
-    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.0'
-
-    compile 'com.heaven7.core.util:util-v1:1.1.2'
-    compile 'com.heaven7.android.util2:android-util2:1.1.4'
-
-    annotationProcessor "com.jakewharton:butterknife-compiler:8.5.1"
-    compile 'com.jakewharton:butterknife:8.5.1'
-    compile project(':testgenerate')
 }
