--- a/Data-mediator-demo/data-mediator-android/build.gradle
+++ b/Data-mediator-demo/data-mediator-android/build.gradle
@@ -32,8 +32,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     testCompile 'junit:junit:4.12'
 
-    compile 'com.heaven7.core.util:util-v1:1.1.2'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.1-beta'
+    compile 'com.heaven7.core.adapter:adapter:1.8.8'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.1-beta2'
 }
 
 ext {
