add demo TestBindArrayPropertyToOneView

--- a/data-binding-test/app/src/main/AndroidManifest.xml
+++ b/data-binding-test/app/src/main/AndroidManifest.xml
@@ -25,10 +25,11 @@
         <activity android:name=".sample.TestViewBindActivity" android:label="TestViewBind"/>
         <activity android:name=".sample.TestImageViewBindActivity" android:label="ImageViewBind"/>
         <activity android:name=".sample.TestSelfBinderActivity" android:label="SelfBinder"/>
+        <activity android:name=".sample.TestBindArrayPropertyToOneView" android:label="BindArrayPropertyToOneView"/>
 
 
-        <activity android:name=".sample.adapter.TestDatabindingAdapter" android:label="ImageViewBind"/>
-        <activity android:name=".sample.adapter.DataBindingAdapterWithHeader" android:label="ImageViewBind"/>
+        <activity android:name=".sample.adapter.TestDatabindingAdapter" android:label="DatabindingAdapter"/>
+        <activity android:name=".sample.adapter.DataBindingAdapterWithHeader" android:label="DataBindingAdapterWithHeader"/>
     </application>
 
 </manifest>
